增加开发环境配置

--- a/13_DEVENV/src/index.html
+++ b/13_DEVENV/src/index.html
@@ -10,6 +10,7 @@
     <h2>Hello webpack development</h2>
     <div>
         <h4>图标测试</h4>
+        <h4>图标测试</h4>
         <span class="iconfont icon-add-circle"></span>
         <span class="iconfont icon-adjust"></span>
     </div>
